[package]
name = "rust-crate-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
say-hello-jan = { version = "=0.4.0", features = ["bye", "all"] }
bye={path = "bye"}
hello={path = "hello"}

[dev-dependencies]
uuid = { version = "=1.8.0", features = ["v4"] }
