workspace = { members = [ "bye","hello"] }

[package]
name = "rust-crate-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
say-hello-jan = { version = "=0.5.0", features = ["bye", "all","hello"] }
hello={path = "hello"}
bye = {path = "bye"}

[dev-dependencies]
uuid = { version = "=1.8.0", features = ["v4"] }
